# prompt-evaluator

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/hooks/: format-python.sh  guard-bash.sh  validate-config.sh
cli/: baseline.py  config.py  dataset.py  experiment.py  prompt.py
configs/: coaching_analyzer.yaml  config.py  prep_analyzer.yaml  prep_chatbot.yaml  question_generator.yaml  schema.yaml
datasets/coaching_analyzer/: test_cases.json
datasets/leader_scoring/: expected.json  test_cases.json
datasets/prep_analyzer_data/: expected.json  test_cases.json
datasets/prep_chatbot_data/: expected.json
docs/: ARCHITECTURE.md  CLAUDE_SKILL_LLM_JUDGE.md  GUIDE.md  LANGSMITH_PROMPTS.md  PACKAGING_PLAN.md  PROMPTOPS_PLAN.md  PROMPT_EVALUATION_PLAN.md  ROADMAP.md  SPECIFICATION.md  TODO.md  langfuse-migration-plan.md
prompt_evaluator/: GUIDE.md  __init__.py  config.py  context.py  models.py  schema.yaml
prompts/: prep_analyzer_prompt.txt
results/: prep_analyzer_full_20260121_154847.json  prep_analyzer_full_20260121_154847.md  prep_analyzer_quick_20260121_120850.json  prep_analyzer_quick_20260121_120850.md
src/: data.py  data_loader.py  pipeline.py  report.py
targets/: prep_output_prompts.py  schemas.py
tests/: 00-LangSmith-ex.ipynb  langsmith_eval.py  test.py  test_evaluators.py
utils/: __init__.py  config_validator.py  dataset_sync.py  eval_adapters.py  git.py  langfuse_client.py  langfuse_datasets.py  langfuse_prompts.py  langsmith_datasets.py  langsmith_prompts.py  models.py  prompt_sync.py
(+124 files in other folders)
